@@ -3,7 +3,7 @@
 # Basic sanity check for tiffcp with G3 compression, 1 dimensional
 # encoding, and zero-filled boundaries.
 #
-. ${srcdir}/common.sh
+. ${srcdir:-.}/common.sh
 outfile=deleteme-$$.tif
 operation=tiffcp
 ${TIFFCP} -c g3:1d:fill ${IMG_MINISWHITE_1C_1B} $outfile
